@startuml

title __WEIGHT's Class Diagram__\n

  namespace com.hapi.absroom {
    namespace weight {
      class com.hapi.absroom.weight.FixPagerSnapHelper {
          - mHorizontalHelper : OrientationHelper
          - mRecyclerView : RecyclerView
          - mVerticalHelper : OrientationHelper
          + attachToRecyclerView()
          + calculateDistanceToFinalSnap()
          + onFling()
          # createSnapScroller()
          - distanceToCenter()
          - getHorizontalHelper()
          - getVerticalHelper()
          - snapFromFling()
      }
    }
  }
  

  namespace com.hapi.absroom {
    namespace weight {
      interface com.hapi.absroom.weight.OnViewPagerListener {
          {abstract} + onInitComplete()
          {abstract} + onPageRelease()
          {abstract} + onPageSelected()
      }
    }
  }
  

  namespace com.hapi.absroom {
    namespace weight {
      class com.hapi.absroom.weight.PagerLayoutManager {
          - currentIndex : int
          - mChildAttachStateChangeListener : OnChildAttachStateChangeListener
          - mDrift : int
          - mRecyclerView : RecyclerView
          + PagerLayoutManager()
          + PagerLayoutManager()
          + onAttachedToWindow()
          + onLayoutChildren()
          + onScrollStateChanged()
          + scrollHorizontallyBy()
          + scrollVerticallyBy()
          + setOnViewPagerListener()
          + setViewGroup()
          - init()
          - realPosition()
      }
    }
  }
  

  namespace com.hapi.absroom {
    namespace weight {
      interface com.hapi.absroom.weight.PagerLayoutManager.IreloadInterface {
          {abstract} + onDestroyPage()
          {abstract} + onReloadPage()
      }
    }
  }
  

  com.hapi.absroom.weight.FixPagerSnapHelper -up-|> androidx.recyclerview.widget.PagerSnapHelper
  com.hapi.absroom.weight.PagerLayoutManager -up-|> androidx.recyclerview.widget.LinearLayoutManager
  com.hapi.absroom.weight.PagerLayoutManager o-- com.hapi.absroom.weight.OnViewPagerListener : mOnViewPagerListener
  com.hapi.absroom.weight.PagerLayoutManager o-- com.hapi.absroom.weight.FixPagerSnapHelper : mPagerSnapHelper
  com.hapi.absroom.weight.PagerLayoutManager +-down- com.hapi.absroom.weight.PagerLayoutManager.IreloadInterface


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
